--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>org.jacoco</groupId>
+   			<artifactId>jacoco-maven-plugin</artifactId>
+    	<version>0.8.3</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -58,6 +64,31 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			 <plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<configuration>
+				<includes>
+					<include>local/happysixplus/backendcodeanalysis/</include>
+				</includes>
+				</configuration>
+				<executions>
+				<execution>
+					<id>pre-test</id>
+					<goals>
+					<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>post-test</id>
+					<phase>test</phase>
+					<goals>
+					<goal>report</goal>
+					</goals>
+				</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
