--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,12 @@
 			<version>3.12.1.GA</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
