--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/code_analysis?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=990428
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.jedis.pool.max-idle=8
-spring.redis.jedis.pool.min-idle=0
-spring.redis.jedis.pool.max-active=8
-spring.redis.jedis.pool.max-wait=-1
-spring.redis.timeout=3000
-spring.session.store-type=redis
+spring.redis.password=
+spring.redis.database=0
