--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,6 @@
     		<artifactId>fastjson</artifactId>
     		<version>1.2.62</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
@@ -82,6 +80,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		<!-- 计算几何库用于随机生成点 -->
+		<dependency>
+			<groupId>com.vividsolutions</groupId>
+			<artifactId>jts</artifactId>
+			<version>1.13</version>
+		</dependency>		
     </dependencies>
 
 	<build>
