--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>local.happysixplus</groupId>
 	<artifactId>backend-codeanalysis</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.1.3.RELEASE</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 
