--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.database=0
+spring.devtools.restart.enabled=false
+spring.thymeleaf.cache=false
